--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,10 +4,29 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../assets/6502013.jpg");
+  background-image: url("../assets/galaxy2.jpg");
   background-size: cover;
     background-repeat: no-repeat;
 }
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  background-color: #4d3a3a;
+  padding: 10px;
+  color: #cccccc;
+}
+
+.navbar-link {
+  margin: 0 10px;
+  color: #333;
+  text-decoration: none;
+}
+
+.navbar-link:hover {
+  color: #000;
+}
+
 /* Title styles */
 h2 {
   font-size: 24px;
@@ -55,4 +74,19 @@ a:hover {
 /* Hover effect for event items */
 li:hover {
   background-color: rgba(51, 51, 51, 0.8);
+}
+
+.navbar {
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+.nav-link {
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  color: #555;
 }
