--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <a routerLink="/events">Go to Events</a>
+  <nav class="navbar">
+    <a routerLink="/events" class="navbar-link">Events</a>
+    <a routerLink="/about" class="navbar-link">About</a>
+    <a routerLink="/contact" class="navbar-link">Contact</a>
+  </nav>
   <router-outlet></router-outlet>
 </div>
