--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="events" class="cosmic-container">
-  <h2 class="cosmic-title">NASA Events</h2>
+  <h1>NASA events</h1>
   <ul class="cosmic-list">
     <li *ngFor="let event of events" class="cosmic-item">
       <h3 class="cosmic-item-title">{{ event.title }}</h3>
@@ -7,4 +7,12 @@
       <button class="cosmic-item-button" (click)="goToEventDetails(event.id)">View Details</button>
     </li>
   </ul>
+  <h2 class="cosmic-title">NASA Events</h2>
+  <img class="planet planet1" src="../../../assets/planets/planet.png" alt="">
+  <img class="planet planet2" src="../../../assets/planets/planet2.png" alt="">
+  <img class="planet planet3" src="../../../assets/planets/planet3.png" alt="">
+  <img class="planet planet4" src="../../../assets/planets/planet5.png" alt="">
+  <img class="planet planet5" src="../../../assets/planets/planet4.png" alt="">
+  <img class="planet planet6" src="../../../assets/planets/planet6.png" alt="">
+  <img class="planet planet7" src="../../../assets/planets/planet7.png" alt="">
 </div>
