--- a/src/app/components/image-search-form/image-search-form.component.html
+++ b/src/app/components/image-search-form/image-search-form.component.html
@@ -1,5 +1,9 @@
-<form (submit)="searchImages()">
-    <input type="text" [(ngModel)]="keyword" placeholder="Enter keyword" />
-    <button type="submit">Search</button>
-  </form>
-  
+<div>
+  <input type="text" [(ngModel)]="searchQuery" placeholder="Enter search query">
+  <button (click)="searchImages()">Search</button>
+</div>
+
+<div *ngFor="let image of images" class="image-container">
+  <img [src]="image.links[0].href" alt="{{ image.data[0].title }}">
+  <p>{{ image.data[0].description }}</p>
+</div>
