--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <nav class="navbar">
     <a routerLink="/events" class="navbar-link">Events</a>
-    <a routerLink="/about" class="navbar-link">About</a>
     <a routerLink="/contact" class="navbar-link">Contact</a>
+    <a routerLink="/image-search" class="navbar-link">Image Search</a>
   </nav>
   <router-outlet></router-outlet>
 </div>
