--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,20 +6,20 @@
   height: 100%;
   background-image: url("../assets/galaxy2.jpg");
   background-size: cover;
-    background-repeat: no-repeat;
+  background-repeat: no-repeat;
 }
 
 .navbar {
   display: flex;
   justify-content: center;
-  background-color: #4d3a3a;
+  background-color: #000000;
   padding: 10px;
   color: #cccccc;
 }
 
 .navbar-link {
   margin: 0 10px;
-  color: #333;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -45,7 +45,6 @@ ul {
 
 li {
   margin-bottom: 20px;
-
   padding: 10px;
   border-radius: 5px;
 }
@@ -63,7 +62,7 @@ p {
 }
 
 a {
-  color: #007bff;
+  color: #6f00ff;
   text-decoration: none;
 }
 
@@ -73,16 +72,11 @@ a:hover {
 
 /* Hover effect for event items */
 li:hover {
-  background-color: rgba(51, 51, 51, 0.8);
-}
-
-.navbar {
-  background-color: #f1f1f1;
-  padding: 10px;
+  background-color: rgba(155, 215, 255, 0.8);
 }
 
 .nav-link {
-  color: #333;
+  color: #ffffff;
   text-decoration: none;
   font-weight: bold;
 }
