--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -4,7 +4,7 @@
     <li *ngFor="let event of events" class="cosmic-item">
       <h3 class="cosmic-item-title">{{ event.title }}</h3>
       <p class="cosmic-item-description">{{ event.description }}</p>
-      <button class="cosmic-item-button" (click)="goToEventDetails(event.id)">View Details</button>
+      <button mat-raised-button class="cosmic-item-button" (click)="goToEventDetails(event.id)">View Details</button>
     </li>
   </ul>
   <h2 class="cosmic-title">NASA Events</h2>
