--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -14,4 +14,5 @@
   <img class="planet planet5" src="../../../assets/planets/planet4.png" alt="">
   <img class="planet planet6" src="../../../assets/planets/planet6.png" alt="">
   <img class="planet planet7" src="../../../assets/planets/planet7.png" alt="">
+  <!-- <img class="satelite" src="../../../assets/spaceships/spaceship2.png" alt=""> -->
 </div>
