--- a/src/app/components/event-list/event-list.component.css
+++ b/src/app/components/event-list/event-list.component.css
@@ -18,6 +18,9 @@ h2 {
   margin-bottom: 10px;
   color: #ffffff;
 }
+h1{
+  text-align: center;
+}
 
 /* Event styles */
 ul {
@@ -240,5 +243,31 @@ li:hover {
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+.satelite {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: chaoticMovement 5s infinite;
+}
+
+@keyframes chaoticMovement {
+  0% {
+    transform: translate(-50%, -50%);
+  }
+  25% {
+    transform: translate(-40%, -60%) rotate(15deg);
+  }
+  50% {
+    transform: translate(-60%, -40%) rotate(-15deg);
+  }
+  75% {
+    transform: translate(-40%, -60%) rotate(15deg);
+  }
+  100% {
+    transform: translate(-50%, -50%);
   }
 }
