--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
 <div class="container">
   <nav class="navbar">
-    <a routerLink="/events" class="navbar-link">Events</a>
-    <a routerLink="/contact" class="navbar-link">Contact</a>
-    <a routerLink="/image-search" class="navbar-link">Image Search</a>
+    <a routerLink="/events" class="navbar-link">
+      <img src="../assets/spaceships/pngwing.com.png" alt="" class="nav-icon">
+      Events
+    </a>
+    <a routerLink="/contact" class="navbar-link">
+      <img src="../assets/spaceships/mandolorian.png" alt="" class="nav-icon">
+      Contact
+    </a>
+    <a routerLink="/image-search" class="navbar-link">
+      <img src="../assets/spaceships/pngwing.com(2).png" alt="" class="nav-icon">
+      Image Search
+    </a>
+    
   </nav>
   <router-outlet></router-outlet>
 </div>
