--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,18 +13,21 @@
   display: flex;
   justify-content: center;
   background-color: #000000;
-  padding: 10px;
+  padding: 25px; /* Increase the padding to make the navbar taller */
   color: #cccccc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-link {
   margin: 0 10px;
   color: #ffffff;
   text-decoration: none;
+  font-size: 23px; /* Increase the font size for better visibility */
+  transition: color 0.3s ease;
 }
 
 .navbar-link:hover {
-  color: #000;
+  color: #6f00ff;
 }
 
 /* Title styles */
@@ -47,6 +50,7 @@ li {
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 h3 {
@@ -63,7 +67,8 @@ p {
 
 a {
   color: #6f00ff;
-  text-decoration: none;
+  text-decoration: none !important;
+  transition: color 0.3s ease;
 }
 
 a:hover {
@@ -79,6 +84,13 @@ li:hover {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.nav-icon {
+  margin-right:10px;
+  width: 25px;
+  height: 35px;
 }
 
 .nav-link:hover {
