--- a/src/app/components/image-search/image-search.component.html
+++ b/src/app/components/image-search/image-search.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-  <h2>Image Search</h2>
 
   <form (ngSubmit)="searchImages()" class="text-center compact-form">
     <mat-form-field class="image-search-input-container">
-      <mat-label>Search for News</mat-label>
+      <mat-label>Image Search</mat-label>
       <input matInput type="text" [(ngModel)]="query" name="query">
       <button mat-button class="items-center" type="submit">Search</button>
     </mat-form-field>
