--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
+<div class="event-details">
 <div class="details flex" *ngIf="event">
     <div class="title-description">
       <h2>{{ event.title }}</h2>
@@ -42,4 +43,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
