--- a/src/app/components/event-details/event-details.component.css
+++ b/src/app/components/event-details/event-details.component.css
@@ -2,14 +2,9 @@
 
 /* Container styles */
 .container {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../../../assets/galaxy.jpg");
-  background-size: cover;
-  background-position: center;
-  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
 
 /* Container styles */
@@ -37,7 +32,33 @@ h2 {
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.event-details {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #ffffff;
+  overflow: auto;
+  width: 30%;
+  max-height: 90vh; /* Adjust the maximum height as desired */
+  padding: 20px;
+}
+
+.event-details::-webkit-scrollbar {
+  width: 8px; /* Set the width of the scrollbar */
+}
+
+.event-details::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.5); /* Set the background color of the scrollbar track */
+}
+
+.event-details::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5); /* Set the color of the scrollbar thumb */
+}
+
+.event-details::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8); /* Set the color of the scrollbar thumb on hover */
 }
 
 .categories {
@@ -53,6 +74,32 @@ h3 {
 .geometrics {
   text-align: center;
   margin-top: 40px;
+}
+
+a{
+  text-decoration: none !important;
+}
+
+a:hover{
+  color: #555;
+}
+
+li{
+  list-style-type: none;
+  font-size: 18px;
+}
+
+table{
+  padding: 10px;
+}
+
+th{
+  padding: 10px;
+}
+
+tr{
+  font-size: 18px;
+  padding: 20px;
 }
 
 /* Rest of the CSS styles remain the same */
