--- a/src/app/components/image-search/image-search.component.css
+++ b/src/app/components/image-search/image-search.component.css
@@ -3,7 +3,6 @@
   color: #ffffff;
 }
 
-
 .image-search-container {
   background-image: url('../../../assets/galaxy2.jpg');
   background-size: cover;
@@ -42,8 +41,12 @@ p{
   width: 100%;
   height: 40px;
   padding: 5px 10px;
-  font-size: 16px;
   box-sizing: border-box; /* Add this to include padding in the width */
+}
+
+label.image-search-input{
+  font-size: 26px;
+  margin: 5px 10px;
 }
 
 .image-search-title {
@@ -118,14 +121,40 @@ li {
   text-align: center;
 }
 
-.images-result-container {
-  height: 800px; /* Adjust the height as needed */
-  width: 30%;
-  overflow: auto;
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.6);
+.centered-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
+.images-result-container {
+  width: 50%; /* Adjust the width as desired */
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow-y: auto;
+  padding: 10px;
+  color: #ffffff;
+}
+.images-result-wrapper {
+  max-height: 900px; /* Set a maximum height for the container */
+  overflow-y: auto; /* Enable vertical overflow */
+}
+
+.images-result-wrapper::-webkit-scrollbar {
+  width: 8px; /* Set the width of the scrollbar */
+}
+
+.images-result-wrapper::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.5); /* Set the background color of the scrollbar track */
+}
+
+.images-result-wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5); /* Set the color of the scrollbar thumb */
+}
+
+.images-result-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8); /* Set the color of the scrollbar thumb on hover */
+}
 .images-result-wrapper {
   overflow: auto;
 }
@@ -206,24 +235,28 @@ li {
   top: 40%;
   right: 30%;
   animation-duration: 10s;
+  opacity: 0.3;
 }
 
 .planet.planet4 {
   top: 50%;
   right: 40%;
   animation-duration: 15s;
+  opacity: 0.3;
 }
 
 .planet.planet5 {
   top: 60%;
   right: 50%;
   animation-duration: 14s;
+  opacity: 0.3;
 }
 
 .planet.planet6 {
   top: 70%;
   right: 60%;
   animation-duration: 11s;
+  opacity: 0.3;
 }
 
 .planet.planet7 {
@@ -244,9 +277,6 @@ li {
   }
 }
 
-.images-result-container{
-
-}
 
 @keyframes slideInRight {
   0% {
@@ -257,4 +287,11 @@ li {
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+
+.image-input {
+  overflow: auto;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
