--- a/src/app/components/image-search/image-search.component.html
+++ b/src/app/components/image-search/image-search.component.html
@@ -8,22 +8,26 @@
     </mat-form-field>
   </form>
 
-  <div class="images-result-container">
-    <h3>Search Results:</h3>
-    <div class="images-result-wrapper">
-      <ul class="images-result-list">
-        <li *ngFor="let item of images">
-          <img [src]="item.links[0].href" alt="{{ item.data[0].title }}" />
-          <h4>{{ item.data[0].title }}</h4>
-          <p>{{ item.data[0].description }}</p>
-        </li>
-      </ul>
+
+  <div class="centered-container">
+    <div class="images-result-container">
+      <h3>Search Results:</h3>
+      <div class="images-result-wrapper">
+        <ul class="images-result-list">
+          <li *ngFor="let item of images">
+            <img [src]="item.links[0].href" alt="{{ item.data[0].title }}" />
+            <h4>{{ item.data[0].title }}</h4>
+            <p>{{ item.data[0].description }}</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div *ngIf="images && images.length === 0">
+      <p>No images found.</p>
     </div>
   </div>
 
-  <div *ngIf="images && images.length === 0">
-    <p>No images found.</p>
-  </div>
   <img class="planet planet1" src="../../../assets/planets/planet.png" alt="">
   <img class="planet planet2" src="../../../assets/planets/planet2.png" alt="">
   <img class="planet planet3" src="../../../assets/planets/planet3.png" alt="">
