--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,4 +1,6 @@
+<video autoplay class='hero' src="../../../assets/video/galaxygo.mp4"></video>
 <div class="container contact-form">
+
   <div *ngIf="imageOfDay" class="image-container">
     <h2 class="image-title">Image of a day: {{ imageOfDay.title }}</h2>
     <img class="image" [src]="imageOfDay.url" alt="{{ imageOfDay.title }}">
@@ -9,9 +11,9 @@
   <h2>Contact Us</h2>
   <p>Feel free to reach out to us using the contact details below:</p>
   <ul>
-    <li>Email: example@example.com</li>
-    <li>Phone: 123-456-7890</li>
-    <li>Address: 123 Street, City, Country</li>
+    <li>Name: Nataliia</li>
+    <li>Email: nataliia1sorokina@gmail.com</li>
+    <li>Address: Winchester, United Kingdom</li>
   </ul>
   <img #spaceship class="spaceship" src="../../../assets/spaceships/pngwing.com(3).png" alt="">
 </div>
