--- a/src/app/components/contacts/contact.component.css
+++ b/src/app/components/contacts/contact.component.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 20px;
     overflow: auto; /* Change 'hidden' to 'auto' */
+    
   }
 
   img{
@@ -51,6 +52,7 @@
   .centered-container {
     display: flex;
     justify-content: center;
+
   }
   
   li{
@@ -59,6 +61,9 @@
   .contact-form{
     background-color: rgba(0, 0, 0, 0.6); /* Add a semi-transparent overlay color */
     overflow: auto; /* Add scrollable behavior */
+        opacity: 5;
+    position: relative; /* Add position relative */
+    z-index: 1; /* Add 
   }
 
   .contact-form::-webkit-scrollbar {
@@ -77,6 +82,13 @@
     background-color: rgba(255, 255, 255, 0.8); /* Set the color of the scrollbar thumb on hover */
   }
   
+  .hero{
+    /* transform: rotate(-100deg); */
+    opacity: 0.3;
+    min-height: 90vh;
+    min-width: 100%;
+    position: absolute;
+  }
 
   .spaceship {
     position: absolute;
