--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -1,4 +1,6 @@
+<video autoplay class='hero' src="../../../assets/video/galaxygo.mp4"></video>
 <div *ngIf="events" class="cosmic-container">
+
   <h1>NASA events</h1>
   <ul class="cosmic-list">
     <li *ngFor="let event of events" class="cosmic-item">
