--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <video autoplay class='hero' src="../../../assets/video/galaxygo.mp4"></video>
 <div class="event-details">
 <div class="details flex" *ngIf="event">
     <div class="title-description">
