--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,9 +13,9 @@
       Image Search
     </a>
   </div>
-  <button class="navbar-toggle" onclick="toggleMobileNavbar()">
+  <!-- <button class="navbar-toggle" onclick="toggleMobileNavbar()">
     <span class="navbar-toggle-icon"></span>
-  </button>
+  </button> -->
 </nav>
 <script>
   function toggleMobileNavbar() {
