--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-menu">
-    <a routerLink="/events" class="navbar-link">
+    <a routerLink="/" class="navbar-link">
       <img src="../assets/spaceships/pngwing.com.png" alt="" class="nav-icon">
       Events
     </a>
