--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,4 +1,4 @@
-<video autoplay class='hero' src="../../../assets/video/galaxygo.mp4"></video>
+<video autoplay class='hero' src="../../../assets/video/smaller.mp4"></video>
 <img #spaceship class="spaceship" src="../../../assets/spaceships/pngwing.com(3).png" alt="">
 <div class="container contact-form">
 
