--- a/src/app/components/image-search/image-search.component.html
+++ b/src/app/components/image-search/image-search.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <video autoplay class='hero' src="../../../assets/video/galaxygo.mp4"></video>
+  <video autoplay class='hero' src="../../../assets/video/smaller.mp4"></video>
   <form (ngSubmit)="searchImages()" class="text-center compact-form">
     <div class="dark-input-container">
       <label class="dark-label">Image Search</label>
