--- a/src/app/components/event-list/event-list.component.css
+++ b/src/app/components/event-list/event-list.component.css
@@ -1,4 +1,5 @@
 /* Title styles */
+@import url(https://allfont.net/allfont.css?fonts=star-jedi);
 h1,
 h2 {
   font-size: 24px;
@@ -8,6 +9,10 @@ h2 {
 }
 h1{
   text-align: center;
+  background: linear-gradient(#ebe6d5, #ffffff, #e6c408);
+  font-family: 'Candal', sans-serif;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Event styles */
@@ -107,8 +112,28 @@ li:hover {
 }
 
 .cosmic-item-button {
-  animation: slideInUp 1s ease-in-out;
-  animation-delay: 0.2s;
+  color: linear-gradient(#ebe6d5, #ffffff, #e6c408);
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+  background: linear-gradient(#ebe6d5, #ffffff, #e6c408);
+  font-family: 'Candal', sans-serif;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.cosmic-item-button:hover {
+  background-color: #fff;
+  box-shadow: 0px 2px 15px rgba(255, 244, 87, 0.3);
+  color: #000;
+}
+
+.cosmic-item-button:focus {
+  outline: none;
+  box-shadow: 0 0 3px 3px rgba(255, 255, 0, 0.5);
 }
 
 @keyframes fadeIn {
