--- a/src/app/components/image-search/image-search.component.html
+++ b/src/app/components/image-search/image-search.component.html
@@ -25,6 +25,7 @@
 
     <div *ngIf="images && images.length === 0">
       <p>No images found.</p>
+      <img src="../../../assets/Yoda.png" alt="">
     </div>
   </div>
 
